--- a/Resources/views/Layout/tb.html.twig
+++ b/Resources/views/Layout/tb.html.twig
@@ -1,4 +1,5 @@
 {% extends 'KnpRadBundle:Layout:h5bp.html.twig' %}
+{% table_theme 'KnpRadBundle:Twig/Table:tb.html.twig' %}
 
 {% block stylesheets %}
     <link rel="stylesheet" href="{{ asset('bundles/knprad/bootstrap/css/bootstrap.min.css') }}" />
